# Call_Me_Maybe

./: .gitignore  Makefile  README.md  install_env.sh  pyproject.toml
data/input/: function_calling_tests.json
llm_sdk/llm_sdk/: __init__.py
src/: __main__.py  args.py  generation.py  state_machine.py
src/generate/: find_values.py  generation.py  state_machine.py  states.py
src/parser/: args.py  f_check.py  f_parser.py  p_parser.py
src/prompt/: create_prompt.py  function_prompt.py
src/prompt_parser/: p_parser.py
