[project]
name = "call_me_maybe"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"flake8>=7.3.0",
	"mypy>=1.19.1",
	"llm-sdk",
]

[dependency-groups]
dev = [
	"flake8>=7.3.0",
	"mypy>=1.19.1",
]

[tool.uv.sources]
llm-sdk = {path = "./llm_sdk", editable = true}
