[project]
name = "call-me-maybe"
version = "0.0.1"
description = "Function calling tool using constrained decoding with a small LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pydantic",
    "accelerate",
    "flake8",
    "mypy",
    "llm-sdk",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk" }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
